--- a/mir-layout/src/main/less/common/mir_results.less
+++ b/mir-layout/src/main/less/common/mir_results.less
@@ -28,6 +28,9 @@
       display: inline-block;
       width: 100%;
       margin-top: 25px;
+      .caret {
+        margin-left: 6px;
+      }
     }
   }
 }
@@ -52,7 +55,7 @@
       float: left;
       width: 100%;
       .panel-heading {
-        background-color: @filter_back;
+        background-color: @panel-default-heading-bg;
         .panel-title {
           color: @filter_headline;
         }
@@ -265,20 +268,32 @@
 
 
 /* file box *****************************************************************/
-@file_box_color: @gray-lighter;
+@file_box_color: @panel-default-heading-bg;
 
       .file_box {
-          border: 1px solid @file_box_color;
-          border-radius: 5px;
-          margin-bottom: 10px;
+          border: 0px solid @file_box_color;
+          border-radius: 0px;
+          margin-bottom: 30px;
         .header {
           .headline {
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            background-color: @file_box_color;
-            padding: 5px 0 5px 0;
+            border-bottom: 1px solid #ddd;
+            padding: 0px 0 0px 0;
             .title {
-              padding: 0 0 0 15px;
+              padding: 0 0 0 0;
+              .file_toggle {
+                font-size: 16px;
+                border: none;
+                background-color: transparent;
+                color: #333;
+                padding: 0;
+                font-weight: 300;
+                .set_number {
+                  margin-left: 6px;
+                }
+                .caret {
+                  margin-left: 6px;
+                }
+              }
             }
             .options {
                 .dropdown-menu > li > a:hover {
@@ -287,9 +302,11 @@
                 .btn {
                   border: 0px solid transparent;
                   margin-right: 0px;
-                  padding: 2px 10px;
                   background-color: transparent;
                   color: @brand-primary;
+                  padding: 5px 10px;
+                  font-size: 12px;
+                  line-height: 1.5;
                   &:hover {
                     color: @link_color;
                     background-color: transparent;
@@ -325,21 +342,30 @@
           }
         }
         .body {
+          margin-top: 5px;
+          div:nth-child(odd) {
+            .file_set {
+              background-color: #F5F5F5;
+            }
+          }
+          div:nth-child(even) {
+            .file_set {
+              background-color: #F9F9F9;
+            }
+          }
           .file_set {
             > .glyphicon-star {
                 color: #fafafa;
                 padding-right: 5px;
+                padding-left: 5px;
             }
             &.active_file {
               > .glyphicon-star {
                 color: @brand-success;
               }
             }
-            &.even {
-              background-color: @table-bg-accent;
-            }
             border-top: 0px solid @file_box_color;
-            padding: 5px 0 5px 15px;
+            padding: 5px 0px 5px 0px;
             .options {
                 .dropdown-menu > li > a:hover {
                   background-color: @highlight;
@@ -401,7 +427,7 @@
             }
             .file_size {
                 color: @gray;
-                padding-left: 10px;
+                padding: 0 10px 0 10px;
                 float: right;
             }
           }
